# hours-tracking-python

./: .coverage  .env  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py
app/: __init__.py  auth.py  db.py  helpers.py
app/blueprints/: auth.py  clients.py  contracts.py  dashboard.py  invoices.py  payments.py  tickets.py  timeentries.py  users.py
app/services/: auth_service.py  client_service.py  contract_service.py  invoice_service.py  payment_service.py  ticket_service.py  time_entry_service.py  user_service.py
templates/: base.html
templates/auth/: login.html
templates/clients/: edit.html  index.html  new.html  show.html
templates/contracts/: edit.html  index.html  new.html  show.html
templates/dashboard/: index.html
templates/invoices/: edit.html  index.html  new.html  show.html
templates/payments/: new.html
templates/tickets/: edit.html  index.html  new.html  show.html
templates/timeentries/: edit.html  index.html  new.html  show.html
templates/users/: edit.html  index.html  new.html
tests/: conftest.py  test_auth_routes.py  test_auth_service.py  test_client_routes.py  test_client_service.py  test_contract_service.py  test_dashboard_routes.py  test_helpers.py  test_invoice_service.py  test_payment_service.py  test_ticket_service.py  test_time_entry_service.py  test_user_routes.py  test_user_service.py
